# plotnine-contest

./: README.md  pyproject.toml
data/3t/: AAPL.csv  NVDA.csv  sp500_companies.csv
notebooks/: 3t_milestone.ipynb  plotnine_contest.ipynb
