[tool.poetry]
name = "plotnine-contest"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.10.14"
polars = "1.1.0"
jupyter = "^1.0.0"
plotnine = "0.13.6"
pyarrow = "16.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
